--- a/03-css/05-position.css
+++ b/03-css/05-position.css
@@ -1,7 +1,8 @@
 :root {
-  --darkviolet: #9400d3;
+  --darkviolet: #9400d3f6;
   --maroon: #800000;
   --darkgolden: #8f6805;
+  --purple: #450c5df6;
 }
 
 .box {
@@ -9,18 +10,41 @@
   color: var(--white);
 }
 
+.main{
+  margin-top: 80px;
+
+}
 .static {
+  position: static;
+  width: 300px;
+  height: 400px;
+
   background-color: var(--darkviolet);
 }
 
 .relative {
+  position: relative;
+  top: -410px;
+  left: 340px;
+  width: 310px;
+  height: 400px;
   background-color: var(--purple);
 }
 
 .absolute {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
   background-color: var(--maroon);
 }
 
 .fixed {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
   background-color: var(--darkgolden);
 }
