--- a/03-css/01-selectors.css
+++ b/03-css/01-selectors.css
@@ -16,24 +16,23 @@ li[class] {
 }
 */
 
-li[id='cat']{
+li[id="cat"] {
   color: var(--teal);
 }
 
-li[class ^= 'p']{
+li[class^="p"] {
   color: var(--green);
 }
 
-li[class='parrot'] {
+li[class="parrot"] {
   color: var(--green);
 }
 
-li[class *= 'do']{
+li[class*="do"] {
   color: var(--royalblue);
 }
 
-
-li[class $= 'g']{
+li[class$="g"] {
   color: var(--violet);
 }
 
@@ -43,12 +42,10 @@ section li {
   color: var(--green);
 }
 
-.first ~ li{
+.first ~ li {
   color: var(--violet);
 }
 
 .second + li {
   color: var(--royalblue);
 }
-
-
