--- a/03-css/06-media-queries.css
+++ b/03-css/06-media-queries.css
@@ -1,3 +1,65 @@
+nav {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+
+  background-color: var(--black);
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline-block;
+  /*width: 120px;
+  margin: 1em;
+  padding: 0.5em 1em;*/
+}
+
+/*make nav bar collapse on on screen */
+@media (max-width: 414px) {
+  nav ul li {
+    width: 100%;
+  }
+  .main {
+    margin-top: 220px;
+  }
+}
+
+nav ul li a {
+  display: block;
+  width: 100%;
+  /*margin: 1em; */
+  padding: 1em;
+  text-decoration: none;
+  color: var(--white);
+}
+
+nav ul li:hover {
+  background-color: var(--gray1);
+}
+
+.main {
+  margin-top: 120px;
+  padding: 0 0.5em;
+}
+
+body {
+  background: var(--purple);
+  color: var(--white);
+}
+
+@media (min-width: 415px) and (max-width: 1024px) {
+  body {
+    background: var(--orange);
+    color: var(--black);
+  }
+}
+
 @media (min-width: 1024px) {
   body {
     background: var(--green);
